Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...a07f02f](https://github.com/cri-o/cri-o/compare/v1.21.0...a07f02ffd6bc39cb8ad35500f83f864b7189756d) on Mon, 09 Aug 2021 18:06:32 UTC.
+[v1.21.0...78f06f2](https://github.com/cri-o/cri-o/compare/v1.21.0...78f06f200a544ec3be594d58a37d247f822c1946) on Tue, 10 Aug 2021 07:41:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz)
-- [cri-o.arm64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz)
+- [cri-o.amd64.78f06f200a544ec3be594d58a37d247f822c1946.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.78f06f200a544ec3be594d58a37d247f822c1946.tar.gz)
+- [cri-o.arm64.78f06f200a544ec3be594d58a37d247f822c1946.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.78f06f200a544ec3be594d58a37d247f822c1946.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -101,14 +101,19 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ### Added
 - github.com/andybalholm/brotli: [v1.0.0](https://github.com/andybalholm/brotli/tree/v1.0.0)
 - github.com/antihax/optional: [v1.0.0](https://github.com/antihax/optional/tree/v1.0.0)
+- github.com/benbjohnson/clock: [v1.0.3](https://github.com/benbjohnson/clock/tree/v1.0.3)
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/carolynvs/magex: [v0.6.0](https://github.com/carolynvs/magex/tree/v0.6.0)
+- github.com/certifi/gocertifi: [2c3bb06](https://github.com/certifi/gocertifi/tree/2c3bb06)
 - github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/cncf/xds/go: [fbca930](https://github.com/cncf/xds/go/tree/fbca930)
+- github.com/cockroachdb/errors: [v1.2.4](https://github.com/cockroachdb/errors/tree/v1.2.4)
+- github.com/cockroachdb/logtags: [eb05cc2](https://github.com/cockroachdb/logtags/tree/eb05cc2)
 - github.com/container-orchestrated-devices/container-device-interface: [f99e8b6](https://github.com/container-orchestrated-devices/container-device-interface/tree/f99e8b6)
 - github.com/containerd/cri-containerd: [v1.19.0](https://github.com/containerd/cri-containerd/tree/v1.19.0)
+- github.com/coredns/caddy: [v1.1.0](https://github.com/coredns/caddy/tree/v1.1.0)
 - github.com/coreos/stream-metadata-go: [70edb9e](https://github.com/coreos/stream-metadata-go/tree/70edb9e)
 - github.com/danieljoos/wincred: [v1.1.0](https://github.com/danieljoos/wincred/tree/v1.1.0)
 - github.com/digitalocean/go-libvirt: [e2a69bc](https://github.com/digitalocean/go-libvirt/tree/e2a69bc)
@@ -116,34 +121,68 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/disiqueira/gotree/v3: [v3.0.2](https://github.com/disiqueira/gotree/v3/tree/v3.0.2)
 - github.com/dsnet/compress: [v0.0.1](https://github.com/dsnet/compress/tree/v0.0.1)
 - github.com/dsnet/golib: [1ea1667](https://github.com/dsnet/golib/tree/1ea1667)
+- github.com/felixge/httpsnoop: [v1.0.1](https://github.com/felixge/httpsnoop/tree/v1.0.1)
 - github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
+- github.com/getsentry/raven-go: [v0.2.0](https://github.com/getsentry/raven-go/tree/v0.2.0)
 - github.com/go-kit/log: [v0.1.0](https://github.com/go-kit/log/tree/v0.1.0)
 - github.com/go-task/slim-sprig: [348f09d](https://github.com/go-task/slim-sprig/tree/348f09d)
+- github.com/gofrs/uuid: [v4.0.0+incompatible](https://github.com/gofrs/uuid/tree/v4.0.0)
 - github.com/google/go-intervals: [v0.0.2](https://github.com/google/go-intervals/tree/v0.0.2)
 - github.com/google/licenseclassifier/v2: [v2.0.0-alpha.1](https://github.com/google/licenseclassifier/v2/tree/v2.0.0-alpha.1)
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
 - github.com/jinzhu/copier: [v0.3.0](https://github.com/jinzhu/copier/tree/v0.3.0)
+- github.com/josharian/intern: [v1.0.0](https://github.com/josharian/intern/tree/v1.0.0)
 - github.com/mholt/archiver/v3: [v3.5.0](https://github.com/mholt/archiver/v3/tree/v3.5.0)
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
 - github.com/pierrec/lz4/v4: [v4.0.3](https://github.com/pierrec/lz4/v4/tree/v4.0.3)
+- github.com/robfig/cron/v3: [v3.0.1](https://github.com/robfig/cron/v3/tree/v3.0.1)
 - github.com/spiegel-im-spiegel/errs: [v1.0.2](https://github.com/spiegel-im-spiegel/errs/tree/v1.0.2)
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
+- github.com/stoewer/go-strcase: [v1.2.0](https://github.com/stoewer/go-strcase/tree/v1.2.0)
 - github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
 - github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
+- go.etcd.io/etcd/api/v3: v3.5.0
+- go.etcd.io/etcd/client/pkg/v3: v3.5.0
+- go.etcd.io/etcd/client/v2: v2.305.0
+- go.etcd.io/etcd/client/v3: v3.5.0
+- go.etcd.io/etcd/pkg/v3: v3.5.0
+- go.etcd.io/etcd/raft/v3: v3.5.0
+- go.etcd.io/etcd/server/v3: v3.5.0
+- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0
+- go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp: v0.20.0
+- go.opentelemetry.io/contrib: v0.20.0
+- go.opentelemetry.io/otel/exporters/otlp: v0.20.0
+- go.opentelemetry.io/otel/metric: v0.20.0
+- go.opentelemetry.io/otel/oteltest: v0.20.0
+- go.opentelemetry.io/otel/sdk/export/metric: v0.20.0
+- go.opentelemetry.io/otel/sdk/metric: v0.20.0
+- go.opentelemetry.io/otel/sdk: v0.20.0
+- go.opentelemetry.io/otel/trace: v0.20.0
+- go.opentelemetry.io/otel: v0.20.0
 - go.opentelemetry.io/proto/otlp: v0.7.0
+- go.uber.org/goleak: v1.1.10
+- k8s.io/kubernetes/staging/src/k8s.io/pod-security-admission: c2b5237
 - sigs.k8s.io/release-utils: v0.3.0
 - sigs.k8s.io/zeitgeist: v0.3.0
 
 ### Changed
+- github.com/Azure/azure-sdk-for-go: [v43.0.0+incompatible → v55.0.0+incompatible](https://github.com/Azure/azure-sdk-for-go/compare/v43.0.0...v55.0.0)
+- github.com/Azure/go-ansiterm: [d6e3b33 → d185dfc](https://github.com/Azure/go-ansiterm/compare/d6e3b33...d185dfc)
+- github.com/Azure/go-autorest/autorest/adal: [v0.9.5 → v0.9.13](https://github.com/Azure/go-autorest/autorest/adal/compare/v0.9.5...v0.9.13)
+- github.com/Azure/go-autorest/autorest/to: [v0.3.0 → v0.4.0](https://github.com/Azure/go-autorest/autorest/to/compare/v0.3.0...v0.4.0)
+- github.com/Azure/go-autorest/autorest: [v0.11.12 → v0.11.18](https://github.com/Azure/go-autorest/autorest/compare/v0.11.12...v0.11.18)
+- github.com/Azure/go-autorest/logger: [v0.2.0 → v0.2.1](https://github.com/Azure/go-autorest/logger/compare/v0.2.0...v0.2.1)
 - github.com/Microsoft/go-winio: [6eac466 → v0.5.0](https://github.com/Microsoft/go-winio/compare/6eac466...v0.5.0)
 - github.com/Microsoft/hcsshim: [v0.8.15 → v0.8.18](https://github.com/Microsoft/hcsshim/compare/v0.8.15...v0.8.18)
 - github.com/VividCortex/ewma: [v1.1.1 → v1.2.0](https://github.com/VividCortex/ewma/compare/v1.1.1...v1.2.0)
-- github.com/aws/aws-sdk-go: [v1.35.24 → v1.37.6](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.37.6)
-- github.com/cenkalti/backoff: [v2.2.1+incompatible → v2.1.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.2.1...v2.1.1)
+- github.com/auth0/go-jwt-middleware: [5493cab → v1.0.1](https://github.com/auth0/go-jwt-middleware/compare/5493cab...v1.0.1)
+- github.com/aws/aws-sdk-go: [v1.35.24 → v1.38.49](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.38.49)
 - github.com/cilium/ebpf: [v0.2.0 → v0.5.0](https://github.com/cilium/ebpf/compare/v0.2.0...v0.5.0)
+- github.com/cockroachdb/datadriven: [80d97fb → bf6692d](https://github.com/cockroachdb/datadriven/compare/80d97fb...bf6692d)
+- github.com/container-storage-interface/spec: [v1.3.0 → v1.5.0](https://github.com/container-storage-interface/spec/compare/v1.3.0...v1.5.0)
 - github.com/containerd/aufs: [20793ff → v1.0.0](https://github.com/containerd/aufs/compare/20793ff...v1.0.0)
 - github.com/containerd/btrfs: [918d888 → v1.0.0](https://github.com/containerd/btrfs/compare/918d888...v1.0.0)
 - github.com/containerd/cgroups: [8a68de5 → v1.0.1](https://github.com/containerd/cgroups/compare/8a68de5...v1.0.1)
@@ -163,6 +202,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
 - github.com/containers/podman/v3: [v3.1.0 → v3.2.3](https://github.com/containers/podman/v3/compare/v3.1.0...v3.2.3)
 - github.com/containers/storage: [v1.28.1 → v1.32.3](https://github.com/containers/storage/compare/v1.28.1...v1.32.3)
+- github.com/coredns/corefile-migration: [v1.0.11 → v1.0.12](https://github.com/coredns/corefile-migration/compare/v1.0.11...v1.0.12)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.14](https://github.com/creack/pty/compare/v1.1.11...v1.1.14)
 - github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
@@ -170,24 +210,39 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
 - github.com/docker/docker: [646072e → v20.10.6+incompatible](https://github.com/docker/docker/compare/646072e...v20.10.6)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
+- github.com/evanphx/json-patch: [v4.9.0+incompatible → v4.11.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.9.0...v4.11.0)
+- github.com/form3tech-oss/jwt-go: [v3.2.2+incompatible → v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/compare/v3.2.2...v3.2.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
+- github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
+- github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
+- github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
+- github.com/golang/groupcache: [8c9f03a → 41bb18b](https://github.com/golang/groupcache/compare/8c9f03a...41bb18b)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
 - github.com/golang/protobuf: [v1.3.5 → v1.5.2](https://github.com/golang/protobuf/compare/v1.3.5...v1.5.2)
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
+- github.com/google/btree: [v1.0.0 → v1.0.1](https://github.com/google/btree/compare/v1.0.0...v1.0.1)
+- github.com/google/cadvisor: [v0.39.0 → v0.39.2](https://github.com/google/cadvisor/compare/v0.39.0...v0.39.2)
 - github.com/google/renameio: [v1.0.0 → v1.0.1](https://github.com/google/renameio/compare/v1.0.0...v1.0.1)
 - github.com/google/uuid: [v1.2.0 → v1.3.0](https://github.com/google/uuid/compare/v1.2.0...v1.3.0)
+- github.com/googleapis/gnostic: [v0.4.1 → v0.5.5](https://github.com/googleapis/gnostic/compare/v0.4.1...v0.5.5)
+- github.com/gopherjs/gopherjs: [0766667 → fce0ec3](https://github.com/gopherjs/gopherjs/compare/0766667...fce0ec3)
 - github.com/grpc-ecosystem/go-grpc-middleware: [v1.2.2 → v1.3.0](https://github.com/grpc-ecosystem/go-grpc-middleware/compare/v1.2.2...v1.3.0)
 - github.com/grpc-ecosystem/grpc-gateway: [v1.9.5 → v1.16.0](https://github.com/grpc-ecosystem/grpc-gateway/compare/v1.9.5...v1.16.0)
 - github.com/hashicorp/consul/api: [v1.3.0 → v1.1.0](https://github.com/hashicorp/consul/api/compare/v1.3.0...v1.1.0)
 - github.com/hashicorp/consul/sdk: [v0.3.0 → v0.1.1](https://github.com/hashicorp/consul/sdk/compare/v0.3.0...v0.1.1)
+- github.com/heketi/heketi: [v10.2.0+incompatible → v10.3.0+incompatible](https://github.com/heketi/heketi/compare/v10.2.0...v10.3.0)
 - github.com/imdario/mergo: [v0.3.11 → v0.3.12](https://github.com/imdario/mergo/compare/v0.3.11...v0.3.12)
 - github.com/ishidawataru/sctp: [00ab2ac → f2269e6](https://github.com/ishidawataru/sctp/compare/00ab2ac...f2269e6)
+- github.com/jonboulle/clockwork: [v0.1.0 → v0.2.2](https://github.com/jonboulle/clockwork/compare/v0.1.0...v0.2.2)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/klauspost/compress: [v1.11.13 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.1)
 - github.com/magefile/mage: [v1.10.0 → v1.11.0](https://github.com/magefile/mage/compare/v1.10.0...v1.11.0)
+- github.com/mailru/easyjson: [v0.7.0 → v0.7.6](https://github.com/mailru/easyjson/compare/v0.7.0...v0.7.6)
 - github.com/mattn/go-runewidth: [v0.0.10 → v0.0.13](https://github.com/mattn/go-runewidth/compare/v0.0.10...v0.0.13)
 - github.com/mattn/go-shellwords: [v1.0.11 → v1.0.12](https://github.com/mattn/go-shellwords/compare/v1.0.11...v1.0.12)
 - github.com/maxbrunsfeld/counterfeiter/v6: [v6.3.0 → v6.4.1](https://github.com/maxbrunsfeld/counterfeiter/v6/compare/v6.3.0...v6.4.1)
+- github.com/miekg/dns: [v1.1.35 → v1.0.14](https://github.com/miekg/dns/compare/v1.1.35...v1.0.14)
+- github.com/moby/term: [df9cb8a → 9d4ed18](https://github.com/moby/term/compare/df9cb8a...9d4ed18)
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.15.2 → v1.16.4](https://github.com/onsi/ginkgo/compare/v1.15.2...v1.16.4)
 - github.com/onsi/gomega: [v1.11.0 → v1.14.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.14.0)
@@ -206,28 +261,66 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
 - github.com/rootless-containers/rootlesskit: [v0.14.0-beta.0 → v0.14.2](https://github.com/rootless-containers/rootlesskit/compare/v0.14.0-beta.0...v0.14.2)
 - github.com/saschagrunert/go-modiff: [v1.2.1 → v1.3.0](https://github.com/saschagrunert/go-modiff/compare/v1.2.1...v1.3.0)
+- github.com/smartystreets/assertions: [b2de0cb → v1.1.0](https://github.com/smartystreets/assertions/compare/b2de0cb...v1.1.0)
+- github.com/spf13/jwalterweatherman: [v1.1.0 → v1.0.0](https://github.com/spf13/jwalterweatherman/compare/v1.1.0...v1.0.0)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
+- github.com/tmc/grpc-websocket-proxy: [0ad062e → e5319fd](https://github.com/tmc/grpc-websocket-proxy/compare/0ad062e...e5319fd)
 - github.com/uber/jaeger-client-go: [v2.25.0+incompatible → v2.28.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.25.0...v2.28.0)
 - github.com/yuin/goldmark: [v1.3.1 → v1.3.5](https://github.com/yuin/goldmark/compare/v1.3.1...v1.3.5)
 - go.etcd.io/bbolt: v1.3.5 → v1.3.6
-- go.uber.org/atomic: v1.5.0 → v1.4.0
-- go.uber.org/multierr: v1.3.0 → v1.1.0
-- go.uber.org/zap: v1.13.0 → v1.10.0
+- go.uber.org/atomic: v1.5.0 → v1.7.0
+- go.uber.org/multierr: v1.3.0 → v1.6.0
+- go.uber.org/zap: v1.13.0 → v1.17.0
 - golang.org/x/crypto: 5ea612d → 0c34fe9
 - golang.org/x/mod: v0.4.0 → v0.4.2
-- golang.org/x/net: d523dce → 89ef3d9
-- golang.org/x/sys: 47abb65 → 9665404
+- golang.org/x/net: d523dce → 37e1c6a
+- golang.org/x/sys: 47abb65 → 59db8d7
 - golang.org/x/term: 6a3ed07 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
-- golang.org/x/tools: v0.1.0 → v0.1.1
+- golang.org/x/time: f8bda1e → 1f47c86
+- golang.org/x/tools: v0.1.0 → v0.1.2
 - google.golang.org/grpc: v1.27.0 → v1.39.0
 - google.golang.org/protobuf: v1.25.0 → v1.26.0
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
 - k8s.io/klog/v2: v2.8.0 → v2.10.0
+- k8s.io/kube-openapi: 591a79e → 9528897
+- k8s.io/kubernetes/staging/src/k8s.io/api: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/apimachinery: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/apiserver: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/cli-runtime: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/client-go: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/cloud-provider: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/cluster-bootstrap: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/code-generator: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/component-base: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/component-helpers: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/controller-manager: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/cri-api: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kube-proxy: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kube-scheduler: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kubectl: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/kubelet: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/legacy-cloud-providers: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/metrics: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/mount-utils: cb303e6 → c2b5237
+- k8s.io/kubernetes/staging/src/k8s.io/sample-apiserver: cb303e6 → c2b5237
+- k8s.io/kubernetes: v1.21.0 → v1.22.0
 - k8s.io/release: v0.7.0 → v0.8.0
+- k8s.io/system-validators: v1.4.0 → v1.5.0
+- k8s.io/utils: 2afb431 → 4b05e18
 - mvdan.cc/editorconfig: e40951b → v0.2.0
 - mvdan.cc/sh/v3: v3.2.4 → v3.3.0
+- sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.0.15 → v0.0.22
+- sigs.k8s.io/kustomize/api: v0.8.5 → v0.8.11
+- sigs.k8s.io/kustomize/cmd/config: v0.9.7 → v0.9.13
+- sigs.k8s.io/kustomize/kustomize/v4: v4.0.5 → v4.2.0
+- sigs.k8s.io/kustomize/kyaml: v0.10.15 → v0.11.0
+- sigs.k8s.io/structured-merge-diff/v4: v4.1.0 → v4.1.2
 
 ### Removed
 - github.com/Knetic/govaluate: [9aa4983](https://github.com/Knetic/govaluate/tree/9aa4983)
@@ -235,13 +328,20 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/Shopify/toxiproxy: [v2.1.4+incompatible](https://github.com/Shopify/toxiproxy/tree/v2.1.4)
 - github.com/VividCortex/gohistogram: [v1.0.0](https://github.com/VividCortex/gohistogram/tree/v1.0.0)
 - github.com/afex/hystrix-go: [fa1af6a](https://github.com/afex/hystrix-go/tree/fa1af6a)
+- github.com/agnivade/levenshtein: [v1.0.1](https://github.com/agnivade/levenshtein/tree/v1.0.1)
+- github.com/andreyvit/diff: [c7f18ee](https://github.com/andreyvit/diff/tree/c7f18ee)
 - github.com/apache/thrift: [v0.13.0](https://github.com/apache/thrift/tree/v0.13.0)
 - github.com/aryann/difflib: [e206f87](https://github.com/aryann/difflib/tree/e206f87)
 - github.com/aws/aws-lambda-go: [v1.13.3](https://github.com/aws/aws-lambda-go/tree/v1.13.3)
 - github.com/aws/aws-sdk-go-v2: [v0.18.0](https://github.com/aws/aws-sdk-go-v2/tree/v0.18.0)
 - github.com/bazelbuild/rules_go: [v0.22.1](https://github.com/bazelbuild/rules_go/tree/v0.22.1)
+- github.com/bifurcation/mint: [93c51c6](https://github.com/bifurcation/mint/tree/93c51c6)
 - github.com/bombsimon/wsl/v2: [v2.0.0](https://github.com/bombsimon/wsl/v2/tree/v2.0.0)
+- github.com/caddyserver/caddy: [v1.0.3](https://github.com/caddyserver/caddy/tree/v1.0.3)
 - github.com/casbin/casbin/v2: [v2.1.2](https://github.com/casbin/casbin/v2/tree/v2.1.2)
+- github.com/cenkalti/backoff: [v2.2.1+incompatible](https://github.com/cenkalti/backoff/tree/v2.2.1)
+- github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
+- github.com/cheekybits/genny: [9127e81](https://github.com/cheekybits/genny/tree/9127e81)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
 - github.com/codahale/hdrhistogram: [3a0bb77](https://github.com/codahale/hdrhistogram/tree/3a0bb77)
 - github.com/eapache/go-resiliency: [v1.1.0](https://github.com/eapache/go-resiliency/tree/v1.1.0)
@@ -250,13 +350,35 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/edsrzf/mmap-go: [v1.0.0](https://github.com/edsrzf/mmap-go/tree/v1.0.0)
 - github.com/franela/goblin: [c9ffbef](https://github.com/franela/goblin/tree/c9ffbef)
 - github.com/franela/goreq: [bcd34c9](https://github.com/franela/goreq/tree/bcd34c9)
+- github.com/globalsign/mgo: [eeefdec](https://github.com/globalsign/mgo/tree/eeefdec)
+- github.com/go-acme/lego: [v2.5.0+incompatible](https://github.com/go-acme/lego/tree/v2.5.0)
+- github.com/go-bindata/go-bindata: [v3.1.1+incompatible](https://github.com/go-bindata/go-bindata/tree/v3.1.1)
+- github.com/go-openapi/analysis: [v0.19.5](https://github.com/go-openapi/analysis/tree/v0.19.5)
+- github.com/go-openapi/errors: [v0.19.2](https://github.com/go-openapi/errors/tree/v0.19.2)
+- github.com/go-openapi/loads: [v0.19.4](https://github.com/go-openapi/loads/tree/v0.19.4)
+- github.com/go-openapi/runtime: [v0.19.4](https://github.com/go-openapi/runtime/tree/v0.19.4)
+- github.com/go-openapi/spec: [v0.19.5](https://github.com/go-openapi/spec/tree/v0.19.5)
+- github.com/go-openapi/strfmt: [v0.19.5](https://github.com/go-openapi/strfmt/tree/v0.19.5)
+- github.com/go-openapi/validate: [v0.19.8](https://github.com/go-openapi/validate/tree/v0.19.8)
+- github.com/gobuffalo/here: [v0.6.0](https://github.com/gobuffalo/here/tree/v0.6.0)
 - github.com/google/go-github/v29: [v29.0.3](https://github.com/google/go-github/v29/tree/v29.0.3)
 - github.com/gorilla/context: [v1.1.1](https://github.com/gorilla/context/tree/v1.1.1)
 - github.com/hashicorp/go-version: [v1.2.0](https://github.com/hashicorp/go-version/tree/v1.2.0)
 - github.com/hudl/fargo: [v1.3.0](https://github.com/hudl/fargo/tree/v1.3.0)
 - github.com/influxdata/influxdb1-client: [8bf82d3](https://github.com/influxdata/influxdb1-client/tree/8bf82d3)
+- github.com/jimstudt/http-authentication: [3eca13d](https://github.com/jimstudt/http-authentication/tree/3eca13d)
+- github.com/kylelemons/godebug: [d65d576](https://github.com/kylelemons/godebug/tree/d65d576)
 - github.com/lightstep/lightstep-tracer-common/golang/gogo: [bc2310a](https://github.com/lightstep/lightstep-tracer-common/golang/gogo/tree/bc2310a)
 - github.com/lightstep/lightstep-tracer-go: [v0.18.1](https://github.com/lightstep/lightstep-tracer-go/tree/v0.18.1)
+- github.com/lucas-clemente/aes12: [cd47fb3](https://github.com/lucas-clemente/aes12/tree/cd47fb3)
+- github.com/lucas-clemente/quic-clients: [v0.1.0](https://github.com/lucas-clemente/quic-clients/tree/v0.1.0)
+- github.com/lucas-clemente/quic-go-certificates: [d2f8652](https://github.com/lucas-clemente/quic-go-certificates/tree/d2f8652)
+- github.com/lucas-clemente/quic-go: [v0.10.2](https://github.com/lucas-clemente/quic-go/tree/v0.10.2)
+- github.com/markbates/pkger: [v0.17.1](https://github.com/markbates/pkger/tree/v0.17.1)
+- github.com/marten-seemann/qtls: [v0.2.3](https://github.com/marten-seemann/qtls/tree/v0.2.3)
+- github.com/mholt/certmagic: [6a42ef9](https://github.com/mholt/certmagic/tree/6a42ef9)
+- github.com/naoina/go-stringutil: [v0.1.0](https://github.com/naoina/go-stringutil/tree/v0.1.0)
+- github.com/naoina/toml: [v0.1.1](https://github.com/naoina/toml/tree/v0.1.1)
 - github.com/nats-io/jwt: [v0.3.2](https://github.com/nats-io/jwt/tree/v0.3.2)
 - github.com/nats-io/nats-server/v2: [v2.1.2](https://github.com/nats-io/nats-server/v2/tree/v2.1.2)
 - github.com/nats-io/nats.go: [v1.9.1](https://github.com/nats-io/nats.go/tree/v1.9.1)
@@ -274,11 +396,20 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/pierrec/lz4: [v2.0.5+incompatible](https://github.com/pierrec/lz4/tree/v2.0.5)
 - github.com/pkg/profile: [v1.2.1](https://github.com/pkg/profile/tree/v1.2.1)
 - github.com/rcrowley/go-metrics: [3113b84](https://github.com/rcrowley/go-metrics/tree/3113b84)
+- github.com/robfig/cron: [v1.1.0](https://github.com/robfig/cron/tree/v1.1.0)
 - github.com/samuel/go-zookeeper: [2cc03de](https://github.com/samuel/go-zookeeper/tree/2cc03de)
 - github.com/sony/gobreaker: [v0.4.1](https://github.com/sony/gobreaker/tree/v0.4.1)
 - github.com/streadway/amqp: [edfb901](https://github.com/streadway/amqp/tree/edfb901)
 - github.com/streadway/handy: [d5acb31](https://github.com/streadway/handy/tree/d5acb31)
+- github.com/thecodeteam/goscaleio: [v0.1.0](https://github.com/thecodeteam/goscaleio/tree/v0.1.0)
+- github.com/tidwall/pretty: [v1.0.0](https://github.com/tidwall/pretty/tree/v1.0.0)
+- github.com/vektah/gqlparser: [v1.1.2](https://github.com/vektah/gqlparser/tree/v1.1.2)
 - github.com/xlab/handysort: [fb3537e](https://github.com/xlab/handysort/tree/fb3537e)
+- go.etcd.io/etcd: dd1b699
+- go.mongodb.org/mongo-driver: v1.1.2
 - go.uber.org/tools: 2cfd321
+- gopkg.in/cheggaaa/pb.v1: v1.0.25
+- gopkg.in/mcuadros/go-syslog.v2: v2.2.1
+- k8s.io/heapster: v1.2.0-beta.1
 - sourcegraph.com/sourcegraph/appdash: ebfcffb
 - vbom.ml/util: efcd4e0
