Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...74c6592](https://github.com/cri-o/cri-o/compare/v1.20.3...74c6592d89ce81b9cacbde07911d26c3a7573747) on Thu, 05 Aug 2021 18:17:32 UTC.
+[v1.20.3...15ec74e](https://github.com/cri-o/cri-o/compare/v1.20.3...15ec74ef1bff516e9c264fa8af22b8aa96adf3b2) on Mon, 16 Aug 2021 21:24:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz)
-- [cri-o.arm64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz)
+- [cri-o.amd64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz)
+- [cri-o.arm64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -37,6 +37,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where container storage can get corrupted if the `link` directory is missing. ([#5130](https://github.com/cri-o/cri-o/pull/5130), [@haircommander](https://github.com/haircommander))
  - Fix a performance regression with exec probes ([#5164](https://github.com/cri-o/cri-o/pull/5164), [@haircommander](https://github.com/haircommander))
  - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
+ - Improve memory usage during container image layer extraction. ([#5201](https://github.com/cri-o/cri-o/pull/5201), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
@@ -49,7 +50,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-- github.com/containers/storage: [aa7e38b → a308a11](https://github.com/containers/storage/compare/aa7e38b...a308a11)
+- github.com/containers/storage: [aa7e38b → 9206c19](https://github.com/containers/storage/compare/aa7e38b...9206c19)
 - github.com/cri-o/ocicni: [513ef78 → 4ea5fb8](https://github.com/cri-o/ocicni/compare/513ef78...4ea5fb8)
 
 ### Removed
