Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...c53e78f](https://github.com/cri-o/cri-o/compare/v1.21.0...c53e78f45ffde7a3b7a3d93d9c8c9410ca0d4fec) on Mon, 16 Aug 2021 08:10:59 UTC.
+[v1.21.0...7cc1f62](https://github.com/cri-o/cri-o/compare/v1.21.0...7cc1f620902a86485e5531a090b22c23b048ee2c) on Tue, 17 Aug 2021 01:15:58 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c53e78f45ffde7a3b7a3d93d9c8c9410ca0d4fec.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c53e78f45ffde7a3b7a3d93d9c8c9410ca0d4fec.tar.gz)
-- [cri-o.arm64.c53e78f45ffde7a3b7a3d93d9c8c9410ca0d4fec.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c53e78f45ffde7a3b7a3d93d9c8c9410ca0d4fec.tar.gz)
+- [cri-o.amd64.7cc1f620902a86485e5531a090b22c23b048ee2c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7cc1f620902a86485e5531a090b22c23b048ee2c.tar.gz)
+- [cri-o.arm64.7cc1f620902a86485e5531a090b22c23b048ee2c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7cc1f620902a86485e5531a090b22c23b048ee2c.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -45,6 +45,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added generation of self-signed certificates for the secure metrics endpoint
   if the provided cert and key paths are not available on disk. ([#5012](https://github.com/cri-o/cri-o/pull/5012), [@saschagrunert](https://github.com/saschagrunert))
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
+ - Added structural logging of container ID, sandbox ID and process ID on container start. ([#5134](https://github.com/cri-o/cri-o/pull/5134), [@saschagrunert](https://github.com/saschagrunert))
  - Automatically reload metrics TLS certificate and key if any of those specified files change. ([#4927](https://github.com/cri-o/cri-o/pull/4927), [@saschagrunert](https://github.com/saschagrunert))
  - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5026](https://github.com/cri-o/cri-o/pull/5026), [@dcbw](https://github.com/dcbw))
  - Changed the logging behavior of klog messages to be included in the CRI-O logs.
