Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...94060e3](https://github.com/cri-o/cri-o/compare/v1.21.0...94060e36f60ef19bf8764210af6461d300a54605) on Tue, 17 Aug 2021 16:42:54 UTC.
+[v1.21.0...71ec863](https://github.com/cri-o/cri-o/compare/v1.21.0...71ec863bb43bb2110b25ff80b53489670da2e0af) on Tue, 17 Aug 2021 18:24:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.94060e36f60ef19bf8764210af6461d300a54605.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.94060e36f60ef19bf8764210af6461d300a54605.tar.gz)
-- [cri-o.arm64.94060e36f60ef19bf8764210af6461d300a54605.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.94060e36f60ef19bf8764210af6461d300a54605.tar.gz)
+- [cri-o.amd64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz)
+- [cri-o.arm64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -52,6 +52,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   The klog info verbositry is converted to CRI-O debug to lower the log verbosity. ([#4973](https://github.com/cri-o/cri-o/pull/4973), [@saschagrunert](https://github.com/saschagrunert))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
+ - Support `io.kubernetes.cri.rdt-class` container annotation for specifying RDT class.
+  
+  Add rdt_config_file config file option (and corresponding --rdt-config-file for command line) for configuring the resctrl pseudo-filesystem. ([#4830](https://github.com/cri-o/cri-o/pull/4830), [@marquiz](https://github.com/marquiz))
  - The config field `drop_infra_ctr` is now true by default ([#5113](https://github.com/cri-o/cri-o/pull/5113), [@haircommander](https://github.com/haircommander))
  - The runtime_config_path option, which allows to specify the path of the runtime configuration file, is now supported by CRI-O.  This is specific to the VM runtime type. ([#5035](https://github.com/cri-o/cri-o/pull/5035), [@fidencio](https://github.com/fidencio))
  - Validate certificate dates for TLS metrics endpoint ([#4990](https://github.com/cri-o/cri-o/pull/4990), [@saschagrunert](https://github.com/saschagrunert))
@@ -132,6 +135,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/licenseclassifier/v2: [v2.0.0-alpha.1](https://github.com/google/licenseclassifier/v2/tree/v2.0.0-alpha.1)
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
+- github.com/intel/goresctrl: [be5fa85](https://github.com/intel/goresctrl/tree/be5fa85)
 - github.com/jinzhu/copier: [v0.3.0](https://github.com/jinzhu/copier/tree/v0.3.0)
 - github.com/josharian/intern: [v1.0.0](https://github.com/josharian/intern/tree/v1.0.0)
 - github.com/mholt/archiver/v3: [v3.5.0](https://github.com/mholt/archiver/v3/tree/v3.5.0)
@@ -223,6 +227,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/google/btree: [v1.0.0 → v1.0.1](https://github.com/google/btree/compare/v1.0.0...v1.0.1)
 - github.com/google/cadvisor: [v0.39.0 → v0.39.2](https://github.com/google/cadvisor/compare/v0.39.0...v0.39.2)
+- github.com/google/go-cmp: [v0.5.5 → v0.5.6](https://github.com/google/go-cmp/compare/v0.5.5...v0.5.6)
+- github.com/google/gofuzz: [v1.1.0 → v1.2.0](https://github.com/google/gofuzz/compare/v1.1.0...v1.2.0)
 - github.com/google/renameio: [v1.0.0 → v1.0.1](https://github.com/google/renameio/compare/v1.0.0...v1.0.1)
 - github.com/google/uuid: [v1.2.0 → v1.3.0](https://github.com/google/uuid/compare/v1.2.0...v1.3.0)
 - github.com/googleapis/gnostic: [v0.4.1 → v0.5.5](https://github.com/googleapis/gnostic/compare/v0.4.1...v0.5.5)
@@ -231,6 +237,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/grpc-ecosystem/grpc-gateway: [v1.9.5 → v1.16.0](https://github.com/grpc-ecosystem/grpc-gateway/compare/v1.9.5...v1.16.0)
 - github.com/hashicorp/consul/api: [v1.3.0 → v1.1.0](https://github.com/hashicorp/consul/api/compare/v1.3.0...v1.1.0)
 - github.com/hashicorp/consul/sdk: [v0.3.0 → v0.1.1](https://github.com/hashicorp/consul/sdk/compare/v0.3.0...v0.1.1)
+- github.com/hashicorp/errwrap: [v1.0.0 → v1.1.0](https://github.com/hashicorp/errwrap/compare/v1.0.0...v1.1.0)
 - github.com/heketi/heketi: [v10.2.0+incompatible → v10.3.0+incompatible](https://github.com/heketi/heketi/compare/v10.2.0...v10.3.0)
 - github.com/imdario/mergo: [v0.3.11 → v0.3.12](https://github.com/imdario/mergo/compare/v0.3.11...v0.3.12)
 - github.com/ishidawataru/sctp: [00ab2ac → f2269e6](https://github.com/ishidawataru/sctp/compare/00ab2ac...f2269e6)
@@ -256,7 +263,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
 - github.com/prometheus/client_golang: [v1.10.0 → v1.11.0](https://github.com/prometheus/client_golang/compare/v1.10.0...v1.11.0)
-- github.com/prometheus/common: [v0.18.0 → v0.26.0](https://github.com/prometheus/common/compare/v0.18.0...v0.26.0)
+- github.com/prometheus/common: [v0.18.0 → v0.29.0](https://github.com/prometheus/common/compare/v0.18.0...v0.29.0)
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rogpeppe/fastuuid: [6724a57 → v1.2.0](https://github.com/rogpeppe/fastuuid/compare/6724a57...v1.2.0)
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
@@ -274,7 +281,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.uber.org/zap: v1.13.0 → v1.17.0
 - golang.org/x/crypto: 5ea612d → 0c34fe9
 - golang.org/x/mod: v0.4.0 → v0.4.2
-- golang.org/x/net: d523dce → 37e1c6a
+- golang.org/x/net: d523dce → abc4532
+- golang.org/x/oauth2: 01de73c → f6687ab
 - golang.org/x/sys: 47abb65 → 59db8d7
 - golang.org/x/term: 6a3ed07 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
@@ -282,6 +290,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/tools: v0.1.0 → v0.1.2
 - google.golang.org/grpc: v1.27.0 → v1.39.0
 - google.golang.org/protobuf: v1.25.0 → v1.26.0
+- gopkg.in/check.v1: 038fdea → 10cb982
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
 - k8s.io/klog/v2: v2.8.0 → v2.10.0
